[package]
name = "memember"
description = "Remember your memes!"
version = "0.1.0"
edition = "2021"

[dependencies]
# framework
axum = "0.6.1"
tokio = { version = "1.19.2", default-features = false, features = ["io-util", "sync", "macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "0.14.19", features = ["full"] }
# logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
# error handling
thiserror = "1.0.31"
# utils
dotenv = "0.15.0"

# Tweak release profile settings for faster code.
# - enable link time optimization
# - reduce the code generation units
[profile.release]
lto = true
codegen-units = 1
